name:              realrealgold
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: ., app
    exposed-modules: Application
                     Foundation
                     Import
                     Import.NoFoundation
                     Model
                     Settings
                     Settings.StaticFiles
                     Handler.Common
                     Handler.Home
                     Handler.Comment

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards

    build-depends: base
                 , aeson
                 , bytestring
                 , case-insensitive
                 , classy-prelude
                 , classy-prelude-conduit
                 , classy-prelude-yesod
                 , conduit
                 , containers
                 , data-default
                 , directory
                 , fast-logger
                 , file-embed
                 , hjsmin
                 , http-conduit
                 , monad-control
                 , monad-logger
                 , mysql
                 , persistent
                 , persistent-mysql
                 , persistent-template
                 , safe
                 , shakespeare
                 , template-haskell
                 , text
                 , time
                 , unordered-containers
                 , vector
                 , wai
                 , wai-extra
                 , wai-logger
                 , warp
                 , yaml
                 , yesod
                 , yesod-auth
                 , yesod-core
                 , yesod-form
                 , yesod-static

executable         realrealgold
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base, realrealgold
    extra-libraries:   stdc++

    if flag(dev) || flag(library-only)
        ghc-options: -threaded
    else
        ghc-options: -threaded -optl-static -optl-pthread -no-auto-link-packages

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections

    build-depends: realrealgold
                 , aeson
                 , bytestring
                 , case-insensitive
                 , classy-prelude
                 , classy-prelude-conduit
                 , classy-prelude-yesod
                 , conduit
                 , containers
                 , data-default
                 , directory
                 , fast-logger
                 , file-embed
                 , hjsmin
                 , http-conduit
                 , monad-control
                 , monad-logger
                 , mysql
                 , persistent
                 , persistent-mysql
                 , persistent-template
                 , safe
                 , shakespeare
                 , template-haskell
                 , text
                 , time
                 , unordered-containers
                 , vector
                 , wai
                 , wai-extra
                 , wai-logger
                 , warp
                 , yaml
                 , yesod
                 , yesod-auth
                 , yesod-core
                 , yesod-form
                 , yesod-static
                 , aeson
                 , base
                 , classy-prelude
                 , classy-prelude-yesod
                 , hspec >= 2.0.0
                 , monad-logger
                 , persistent
                 , persistent-mysql
                 , resourcet
                 , shakespeare
                 , transformers
                 , yesod
                 , yesod-static
                 , yesod-core
                 , yesod-test
